// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multisig Wallet reducer should handle MULTISIG_FETCHED 1`] = `
Object {
  "id": null,
  "isFailed": false,
  "isFetched": true,
  "isFetching": false,
  "isPending": false,
  "list": Object {
    "a1": Object {
      "address": "a1",
      "dao": null,
      "id": null,
      "is2FA": false,
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isMultisig": true,
      "isPending": false,
      "name": "No name",
      "owners": Array [],
      "pendingTxList": Object {
        "id": null,
        "isFailed": false,
        "isFetched": false,
        "isFetching": false,
        "isPending": false,
        "list": Object {},
        "selected": null,
        "timestamp": null,
        "transactionHash": null,
      },
      "requiredSignatures": null,
      "timestamp": null,
      "tokens": Object {},
      "transactionHash": null,
      "transactions": Object {
        "endOfList": false,
        "id": null,
        "isFailed": false,
        "isFetched": false,
        "isFetching": false,
        "isPending": false,
        "list": Object {},
        "selected": null,
        "timestamp": null,
        "transactionHash": null,
      },
    },
    "a2": Object {
      "address": "a2",
      "dao": null,
      "id": null,
      "is2FA": false,
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isMultisig": true,
      "isPending": false,
      "name": "No name",
      "owners": Array [],
      "pendingTxList": Object {
        "id": null,
        "isFailed": false,
        "isFetched": false,
        "isFetching": false,
        "isPending": false,
        "list": Object {},
        "selected": null,
        "timestamp": null,
        "transactionHash": null,
      },
      "requiredSignatures": null,
      "timestamp": null,
      "tokens": Object {},
      "transactionHash": null,
      "transactions": Object {
        "endOfList": false,
        "id": null,
        "isFailed": false,
        "isFetched": false,
        "isFetching": false,
        "isPending": false,
        "list": Object {},
        "selected": null,
        "timestamp": null,
        "transactionHash": null,
      },
    },
  },
  "selected": null,
  "timestamp": null,
  "transactionHash": null,
}
`;

exports[`Multisig Wallet reducer should handle MULTISIG_FETCHING 1`] = `
Object {
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": true,
  "isPending": false,
  "list": Object {},
  "selected": null,
  "timestamp": null,
  "transactionHash": null,
}
`;

exports[`Multisig Wallet reducer should handle MULTISIG_REMOVE 1`] = `
Object {
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isPending": false,
  "list": Object {
    "a1": Object {
      "address": "a1",
      "dao": null,
      "id": null,
      "is2FA": false,
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isMultisig": true,
      "isPending": false,
      "name": "No name",
      "owners": Array [],
      "pendingTxList": Object {
        "id": null,
        "isFailed": false,
        "isFetched": false,
        "isFetching": false,
        "isPending": false,
        "list": Object {},
        "selected": null,
        "timestamp": null,
        "transactionHash": null,
      },
      "requiredSignatures": null,
      "timestamp": null,
      "tokens": Object {},
      "transactionHash": null,
      "transactions": Object {
        "endOfList": false,
        "id": null,
        "isFailed": false,
        "isFetched": false,
        "isFetching": false,
        "isPending": false,
        "list": Object {},
        "selected": null,
        "timestamp": null,
        "transactionHash": null,
      },
    },
    "a2": Object {
      "address": "a2",
      "dao": null,
      "id": null,
      "is2FA": false,
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isMultisig": true,
      "isPending": false,
      "name": "No name",
      "owners": Array [],
      "pendingTxList": Object {
        "id": null,
        "isFailed": false,
        "isFetched": false,
        "isFetching": false,
        "isPending": false,
        "list": Object {},
        "selected": null,
        "timestamp": null,
        "transactionHash": null,
      },
      "requiredSignatures": null,
      "timestamp": null,
      "tokens": Object {},
      "transactionHash": null,
      "transactions": Object {
        "endOfList": false,
        "id": null,
        "isFailed": false,
        "isFetched": false,
        "isFetching": false,
        "isPending": false,
        "list": Object {},
        "selected": null,
        "timestamp": null,
        "transactionHash": null,
      },
    },
  },
  "selected": null,
  "timestamp": null,
  "transactionHash": null,
}
`;

exports[`Multisig Wallet reducer should handle MULTISIG_SELECT 1`] = `
Object {
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isPending": false,
  "list": Object {
    "a1": Object {
      "address": "a1",
      "dao": null,
      "id": null,
      "is2FA": false,
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isMultisig": true,
      "isPending": false,
      "name": "No name",
      "owners": Array [],
      "pendingTxList": Object {
        "id": null,
        "isFailed": false,
        "isFetched": false,
        "isFetching": false,
        "isPending": false,
        "list": Object {},
        "selected": null,
        "timestamp": null,
        "transactionHash": null,
      },
      "requiredSignatures": null,
      "timestamp": null,
      "tokens": Object {},
      "transactionHash": null,
      "transactions": Object {
        "endOfList": false,
        "id": null,
        "isFailed": false,
        "isFetched": false,
        "isFetching": false,
        "isPending": false,
        "list": Object {},
        "selected": null,
        "timestamp": null,
        "transactionHash": null,
      },
    },
  },
  "selected": "a1",
  "timestamp": null,
  "transactionHash": null,
}
`;

exports[`Multisig Wallet reducer should handle MULTISIG_UPDATE (update existing wallet) 1`] = `
Object {
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isPending": false,
  "list": Object {
    "a1": Object {
      "address": "a1",
      "dao": null,
      "id": null,
      "is2FA": false,
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isMultisig": true,
      "isPending": false,
      "name": "No name",
      "owners": Array [],
      "pendingTxList": Object {
        "id": null,
        "isFailed": false,
        "isFetched": false,
        "isFetching": false,
        "isPending": false,
        "list": Object {},
        "selected": null,
        "timestamp": null,
        "transactionHash": null,
      },
      "requiredSignatures": null,
      "timestamp": null,
      "tokens": Object {
        "t1": Object {
          "address": null,
          "allowance": Object {},
          "balance": "0",
          "dao": null,
          "decimals": null,
          "fee": null,
          "feeAddress": null,
          "icon": null,
          "id": null,
          "isFailed": false,
          "isFetched": false,
          "isFetching": false,
          "isOptional": true,
          "isPending": false,
          "isReissuable": null,
          "managersList": null,
          "name": null,
          "platform": null,
          "symbol": null,
          "timestamp": null,
          "totalSupply": "0",
          "transactionHash": null,
          "url": null,
          "withFee": null,
        },
      },
      "transactionHash": null,
      "transactions": Object {
        "endOfList": false,
        "id": null,
        "isFailed": false,
        "isFetched": false,
        "isFetching": false,
        "isPending": false,
        "list": Object {},
        "selected": null,
        "timestamp": null,
        "transactionHash": null,
      },
    },
  },
  "selected": null,
  "timestamp": null,
  "transactionHash": null,
}
`;
